--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-google-maps/api": "2.20.6",
     "clsx": "2.1.1",
     "framer-motion": "12.15.0",
+    "hls.js": "1.5.18",
+    "lenis": "1.1.9",
     "lucide-react": "0.511.0",
     "next": "15.3.3",
     "next-themes": "0.4.6",
