--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "eslint-config-next": "15.2.2",
     "gh-pages": "6.3.0",
     "tailwindcss": "4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "wrangler": "^3.111.0"
   },
   "optionalDependencies": {
     "@tailwindcss/oxide-linux-x64-gnu": "4.0.1",
