--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "2.1.1",
     "framer-motion": "12.15.0",
     "hls.js": "1.5.18",
-    "lenis": "1.1.9",
+    "lenis": "^1.3.17",
     "lucide-react": "0.511.0",
     "next": "15.3.3",
     "next-themes": "0.4.6",
@@ -29,6 +29,7 @@
     "resend": "^4.5.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@eslint/eslintrc": "3",
     "@tailwindcss/postcss": "4",
     "@types/node": "20.17.52",
