--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "9",
     "eslint-config-next": "^16.1.6",
     "gh-pages": "6.3.0",
+    "node-stdlib-browser": "^1.3.1",
     "tailwindcss": "4",
     "typescript": "5.8.3",
     "wrangler": "^4.64.0"
